# sdl_build_up

./: CMakeLists.txt  main.cpp  sdlLayer.cpp  sdlLayer.h
SDL2/src/: SDL_internal.h
